bug fix: quiz fetch not working for user role

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@ Icon?
 .Trashes
 
 # ====================
+# Visual Studio IDE Files
+# ====================
+.vs/
+
+# ====================
 # Rider IDE Files
 # ====================
 .idea/
